--- a/views/partials/productList.hbs
+++ b/views/partials/productList.hbs
@@ -22,7 +22,7 @@
     {{/each}}
     </tbody>
     {{else}}
-        <span>No hay productos!</span>
+        {{> notFound}}
 {{/if }}
 </table>
 </div>
