--- a/views/partials/chat.hbs
+++ b/views/partials/chat.hbs
@@ -10,8 +10,15 @@
 <body>
     <div class='chatContainer'>
         <div class='userContainer' id='userContainer'>
-            <input type="email" name="inputUser" id="inputUser" placeholder="Inserte su nombre">
+            <div id='userInfoArea'>
+            <input type="email" name="inputUser" id="inputUser" placeholder="Inserte su email">
+            <input type="nombre" name="inputUser" id="firstName" placeholder="Inserte su nombre">
+            <input type="surname" name="inputUser" id="surname" placeholder="Inserte su apellido">
+            <input type="alias" name="inputUser" id="alias" placeholder="Inserte su alias">
+            <input type="avatar" name="inputUser" id="avatar" placeholder="Inserte su avatar">
+            <input type="edad" name="inputUser" id="age" placeholder="Inserte su edad">
             <button id='setUser'>SET</button>
+        </div>  
         </div>
         <span id='connectedUsers'></span>
         <span id='userName'></span>
